kustomize/bases/monitoring/prometheus/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: monitoring
    app.kubernetes.io/instance: monitoring-prometheus
    app.kubernetes.io/version: v2.50.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/instance:  monitoring-prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus
        app.kubernetes.io/part-of: monitoring
        app.kubernetes.io/instance: monitoring-prometheus
        app.kubernetes.io/version: v2.50.1
    spec:
      serviceAccount: prometheus
      containers:
        - name: prometheus
          image: "quay.io/prometheus/prometheus:v2.50.1"
          args:
            - --config.file=/etc/prometheus/prometheus.yaml
            - --storage.tsdb.path=/prometheus
            - --storage.tsdb.retention.time=1y
          # This is only informational and not necessarily needed.
          # https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#container-v1-core
          # ports:
          #   - containerPort: 9090
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/
            - name: prometheus-storage
              mountPath: /prometheus/
              subPath: ""
      securityContext:
        # These enable Prometheus to write to the pvc.
        fsGroup: 65534
        runAsGroup: 65534
        runAsUser: 65534
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
        # Ephemeral storage, good for testing.
        # - name: prometheus-storage
        #   emptyDir: {}
        - name: prometheus-storage
          persistentVolumeClaim:
            claimName: prometheus
