kustomize/bases/monitoring/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: monitoring
    app.kubernetes.io/instance: monitoring-prometheus
    app.kubernetes.io/version: v2.50.1
  annotations:
    # Scrape only the service not each service endpoint.
    prometheus.io/scrape: service
spec:
  # Make a headless service.
  clusterIP: None
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: monitoring-prometheus
